Add: 추가하기 버튼의 뷰 구현

--- a/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
+++ b/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
@@ -47,6 +47,12 @@
                     <view key="view" contentMode="scaleToFill" id="dQm-x7-wxf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5dk-su-iyU">
+                                <rect key="frame" x="130" y="159" width="110" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="82l-gO-8Vz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
