--- a/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
+++ b/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
@@ -95,6 +95,12 @@
                     <view key="view" contentMode="scaleToFill" id="VzN-FR-k9V">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rVL-YX-Nnx">
+                                <rect key="frame" x="0.0" y="247" width="414" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </datePicker>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="b1X-T1-ww8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
