--- a/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
+++ b/MyPetD/MyPetD/TabBar/Base.lproj/Main.storyboard
@@ -88,23 +88,17 @@
             </objects>
             <point key="canvasLocation" x="500" y="860"/>
         </scene>
-        <!--Item-->
+        <!--Todo-->
         <scene sceneID="4dF-AO-D05">
             <objects>
-                <viewController id="SY6-Rp-dll" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TodoViewController" id="SY6-Rp-dll" customClass="TodoViewController" customModule="MyPetD" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VzN-FR-k9V">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rVL-YX-Nnx">
-                                <rect key="frame" x="0.0" y="247" width="414" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </datePicker>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="b1X-T1-ww8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="ws3-PT-x2l"/>
+                    <tabBarItem key="tabBarItem" title="Todo" image="note.text" catalog="system" id="ws3-PT-x2l"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHV-TE-u5z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -152,6 +146,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="note.text" catalog="system" width="128" height="106"/>
         <image name="pentagon" catalog="system" width="128" height="113"/>
         <image name="shippingbox" catalog="system" width="128" height="124"/>
         <systemColor name="systemBackgroundColor">
